# eci-cli

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  nuitka-crash-report.xml  pyproject.toml
.github/workflows/: release.yml
app/: cli.py  client.py  config.py
app/commands/: config.py  configure.py  image.py  instance_type.py  org.py  pricing.py  region.py  vm_spec.py  zone.py
app/commands/compute/: __init__.py  _pricing.py  cluster.py  launch.py  ssh.py  vm.py
app/commands/network/: __init__.py  ip.py  nic.py  public_ip.py  subnet.py  vnet.py  vpn.py
app/commands/storage/: __init__.py  block.py  object.py  pfs.py
app/utils/: __init__.py  error_humanizer.py  group.py  name_resolver.py  options.py  output.py  registration.py  resource_group.py
scripts/: install.ps1  install.sh
tests/: conftest.py  test_cli.py  test_client.py  test_config.py
tests/commands/: test_config.py  test_configure.py  test_image.py  test_instance_type.py  test_org.py  test_pricing.py  test_region.py  test_vm_spec.py  test_zone.py
tests/commands/compute/: test_cluster.py  test_launch.py  test_ssh.py  test_vm.py
tests/commands/network/: test_ip.py  test_nic.py  test_public_ip.py  test_subnet.py  test_vnet.py  test_vpn.py
tests/commands/storage/: test_block.py  test_object.py  test_pfs.py
tests/utils/: test_error_humanizer.py  test_name_resolver.py  test_options.py  test_output.py  test_registration.py
