[project]
name = "eci-cli"
version = "0.1.0"
description = "ECI — Elice Cloud Infrastructure CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
eci = "app.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "types-requests",
    "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
    "/app",
    "/tests",
    "/pyproject.toml",
    "/README.md",
    "/uv.lock",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["error"]
